# sfdr

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  empty.env  entry_point.sh  manage.py  pyproject.toml  requirements.txt  start.sh  uwsgi.ini
ELK/: README.md  docker-compose.yml
ELK/elasticsearch/: Dockerfile
ELK/kibana/: Dockerfile
ELK/kibana/config/: kibana.yml
ELK/logstash/: Dockerfile
ELK/logstash/pipeline/: logstash.conf
SFDR/: asgi.py  celery.py  redis.py  routers.py  settings.py  urls.py  wsgi.py
apps/agent/: models.py  routers.py  serializers.py  views.py
apps/agent/migrations/: 0001_initial.py  0002_agent_user.py  0002_alter_agent_name.py  0002_initial.py  0003_remove_agent_user.py
apps/order/: admin.py  enums.py  exc.py  factories.py  models.py  routers.py  serializers.py  tests.py  utils.py  views.py
apps/order/migrations/: 0001_initial.py  0002_remove_order_trip_alter_order_name.py  0002_remove_orderdelayreport_sate_orderdelayreport_state.py  0003_orderdelayreport_unique_assigned_delay_report_to_one_agent.py  0004_remove_orderdelayreport_unique_assigned_delay_report_to_one_agent_and_more.py  0005_remove_orderdelayreport_unique_assigned_delay_report_to_one_agent_and_more.py
apps/trip/: models.py  routers.py  serializers.py  views.py
apps/user/: models.py  routers.py  serializers.py  views.py
assets/: swagger.yaml
environments/: cicd.env  development.env  production.env
nginx/: Dockerfile  django.conf
static/: staticfiles.json
utils/: fakers.py
(+6 files in other folders)
